objects/Registered_Guest__c.object
<CustomObject>
    <description>Guest assigned to reservation and room that they are located in.</description>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Guest__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Full_Name__c</fullName>
        <formula>Guest__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guest Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>Registered Guests</relationshipLabel>
        <relationshipName>Registered_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Guest__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Registered Guests</relationshipLabel>
        <relationshipName>Registered_Guests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Registered Guests</relationshipLabel>
        <relationshipName>Registered_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Registered Guest</label>
    <nameField>
        <displayFormat>RG-{00000000}</displayFormat>
        <label>Registered Guest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>